--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https: //USERNAME.github.io/REPONAME/",
+  "homepage": "https: //USERNAME.github.io/goit-react-hw-06-phonebook-vite/",
   "name": "goit-react-hw-06-phonebook-vite",
   "private": true,
   "version": "0.0.0",
